re PR fortran/41258 (internal compiler error: in find_typebound_proc_uop, at fortran/symbol.c:4575)

2009-09-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/41258
	* primary.c (gfc_match_varspec): Do not look for typebound
	procedures unless the derived type has a f2k_derived namespace.

2009-09-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/41258
	* gfortran.dg/typebound_proc_12.f90 : New test.

From-SVN: r151451